--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 <body>
 
+<div class="main"></div>
+
 
 <div class="box"></div>
 
 <button class="button">Pokaż element</button>
 
+<script src="script.js" type="text/javascript"></script>
+<script src="main.js" type="text/javascript"></script>
 
 </body>
 </html>
